# DEEP-LEARNING-2025

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  environment-cpu.yml  environment-gpu.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
dl_utils/: __init__.py  train.py  viz.py
notebooks/: 2- pretrained convnet.ipynb  W01_intro_dl.ipynb  W01_lab_guide.tex  W02_perceptron_mlp.ipynb  W03_optimization_regularization.ipynb  W04_cnn_basics.ipynb  W05_cnn_advanced_aug_transfer.ipynb  W06_rnns_lstm_gru_sequences.ipynb  W07_attention_transformers_fundamentals.ipynb  W08_nlp_with_keras_nlp.ipynb  W09_cv_with_keras_cv.ipynb  W10_tfrecord_tfdata_performance.ipynb  W11_tensorboard_debugging_profiling.ipynb  W12_deployment_savedmodel_tflite.ipynb  W13_responsible_ai_eval.ipynb  W14_capstone_template.ipynb  dataset_api_kaggle.ipynb  kaggle.json  studying.ipynb  studying_purposes.ipynb
notebooks/dl_utils/: __init__.py  analysis.py  data.py  viz.py
notebooks/refs/: 2- pretrained convnet.ipynb  Training a convnet from scratch on a small dataset.ipynb
old content/: Deep Learning Model A Build Up.docx  Deep Learning Model B Build Up.docx
old content/Complementary_LecSec/: autoencoders.ipynb
scripts/: new_week.py
templates/: notebook_template.py
